--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://virusokestutorialok.github.io/web/about">Rólam</a></li>
-        <li><a href="#filmek&sorozatok">Filmek és Sorozatok</a></li>
+        <li><a href="#filmeksorozatok">Filmek és Sorozatok</a></li>
         <li><a href="#upload">Feltöltés</a></li>
        <li><a href="#kontakt">Kontakt</a></li>
       
@@ -235,7 +235,7 @@
 </div>
 
 <!-- Container (About Section) -->
-<div id="filmek&sorozatok" class="container-fluid">
+<div id="filmeksorozatok" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
       <h2>Filmek és sorozatok:</h2><br>
