--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://virusokestutorialok.github.io/web/about">Rólam</a></li>
+        <li><a href="https://filmekesorozatok.github.io/web/filmertekeles">Film értékelés</a></li>
         <li><a href="#filmeksorozatok">Filmek és Sorozatok</a></li>
         <li><a href="#upload">Feltöltés</a></li>
        <li><a href="#kontakt">Kontakt</a></li>
