--- a/filmertekeles/index.html
+++ b/filmertekeles/index.html
@@ -1,4 +1,7 @@
-<title>
+           <!DOCTYPE html>
+<html lang="hu">
+<head>
+<title>Film értékelés<title>
   <body>
     <html>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScy7Ja62YVSnQE1QZzcWfnWHOe68C3avcCLq4e9ijVkSsIMEw/viewform?embedded=true" width="640" height="984" frameborder="0" marginheight="0" marginwidth="0">Betöltés…</iframe>
