--- a/filmertekeles/index.html
+++ b/filmertekeles/index.html
@@ -1,2 +1,2 @@
-<title>Értékelés<title>
+<title>Értékelés
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScy7Ja62YVSnQE1QZzcWfnWHOe68C3avcCLq4e9ijVkSsIMEw/viewform?embedded=true" width="640" height="984" frameborder="0" marginheight="0" marginwidth="0">Betöltés…</iframe>
