--- a/filmertekeles/index.html
+++ b/filmertekeles/index.html
@@ -1,2 +1,1 @@
-<title>Értékelés
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScy7Ja62YVSnQE1QZzcWfnWHOe68C3avcCLq4e9ijVkSsIMEw/viewform?embedded=true" width="640" height="984" frameborder="0" marginheight="0" marginwidth="0">Betöltés…</iframe>
+<meta http-equiv="refresh" content="0; URL=https://forms.gle/rf8zjWMWqoaA6J5B8" />
