--- a/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
+++ b/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
@@ -248,13 +248,12 @@
          <div id="video_cim">Rick és Morty 1.évad 1.rész</a></div>
      
  <div id="navigacio3">
-<a class="btn btn-primary" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz"><span>1. évad</span></a>
-<a class="btn btn-primary" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/2_evad/1_resz"><span>2.</span></a>
+<h4>Évadok:<h4><a class="btn btn-success" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz"><span>1. évad</span></a>
+<a class="btn btn-success" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/2_evad/1_resz"><span>2.</span></a>
 
       </div>
-<h4>Részek:<h4> 
-           <a class="btn btn-primary" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz"><span>1. rész</span></a> 
-           <a class="btn btn-primary" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/2_resz"><span>2.</span></a>
+<h4>Részek:<h4><a class="btn btn-warning" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz"><span>1. rész</span></a> 
+           <a class="btn btn-warning" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/2_resz"><span>2.</span></a>
 
 
  </div>
