--- a/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
+++ b/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
@@ -241,7 +241,7 @@
          </div>
           
          <div id="navigacio">
-              <a id="kovetkezo-gyors" class="evad_link_vezerlo kovetkezo" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz/"><img src="https://filmekesorozatok.github.io/web/képek/jobbranyíl.png"></a>
+              <a id="kovetkezo-gyors" class="evad_link_vezerlo kovetkezo" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz/"><img src="https://jobbmintatv.hu/adatlap.png"></a>
               <a class="evad_link_vezerlo adatlap info" info="adatlap" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/"><img src="https://filmekesorozatok.github.io/web/képek/adatlap.png"></a>
             </div>
      <div class="box" style="blue">       
