--- a/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
+++ b/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
@@ -241,8 +241,8 @@
          </div>
           
          <div id="navigacio">
-              <a id="kovetkezo-gyors" class="evad_link_vezerlo kovetkezo" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz/"><img src="https://jobbmintatv.hu/img/kovetkezo.png"></a>
-              <a class="evad_link_vezerlo adatlap info" info="adatlap" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/"><img src="https://jobbmintatv.hu/img/adatlap.png"></a>
+           <a class="btn btn-danger" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/2_resz"><span>Következő rész</span></a>
+           <a class="btn btn-info" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/"><span>További rész</span></a>
             </div>
      <div class="box" style="blue">       
          <div id="video_cim">Rick és Morty 1.évad 1.rész</a></div>
