--- a/sorozatok/Rick_es_Morty/1_evad/2_resz/index.html
+++ b/sorozatok/Rick_es_Morty/1_evad/2_resz/index.html
@@ -237,7 +237,7 @@
       <h4>Rick és Morty</h4><br>
       
           <div id="video">
-         <iframe src="https://video9.videa.hu/static/360p/8.1676695.2201007.1.13.1.1?md5=p163yQ2z3kimkDk3iOt5_w&expires=1626212271;autoplay=0" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" frameborder="0"></iframe>
+         <iframe src="//videa.hu/static/still/1.13.8.1676695.2201007.3?md5=yJwjAEgwhz-6Wd2JICzpSw&expires=1657719601;autoplay=0" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" frameborder="0"></iframe>
          </div>
           
          <div id="navigacio">
