--- a/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
+++ b/sorozatok/Rick_es_Morty/1_evad/1_resz/index.html
@@ -254,7 +254,8 @@
       </div>
 <h4>Részek:<h4><a class="btn btn-warning" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/1_resz"><span>1. rész</span></a> 
            <a class="btn btn-warning" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/2_resz"><span>2.</span></a>
-
+<h4>Értékelés<h4>
+           <a class="btn btn-info" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/filmertekeles/"><span>Értékelés</span></a>
 
  </div>
     <h1>Megtalálási hely:<h1>
