--- a/sorozatok/Rick_es_Morty/1_evad/2_resz/index.html
+++ b/sorozatok/Rick_es_Morty/1_evad/2_resz/index.html
@@ -245,7 +245,7 @@
            
          <div id="navigacio">
            <a class="btn btn-danger" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/1_evad/3_resz"><span>Következő rész</span></a>
-           <a class="btn btn-info" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/"><span>További rész</span></a>
+           <a class="btn btn-info" target="_blank" role="button" href="https://filmekesorozatok.github.io/web/sorozatok/Rick_es_Morty/"><span>Adatlap</span></a>
             </div>
      <div class="box" style="blue">       
          <div id="video_cim">Rick és Morty 1.évad 1.rész</a></div>
