--- a/index.html
+++ b/index.html
@@ -238,6 +238,29 @@
 <div id="filmeksorozatok" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
+               <!DOCTYPE html>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+   
+<div class="container">
+                                      
+  <div class="dropdown">
+    <button class="btn btn-default dropdown-toggle" type="btn" id="menu1" data-toggle="dropdown">Szűrők
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Népszerű</a></li>
+ 
+  </div>
+</div>
+
+
+
       <h2>Filmek és sorozatok:</h2><br>
       <h4>Rick és Morty</h4><br>
       
