--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 
 <div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button class="dropbtn">Szűrők</button>
   <div class="dropdown-content">
     <a href="https://filmekesorozatok.github.io/web/szuro/nepszeru">Népszerű</a>
   </div>
