--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://filmekesorozatok.github.io/web">Kezdőlap</a></li>
+        <li><a href="https://filmekesorozatok.github.io/web/dc">Discord (MÉG NINCS)</a></li>
    
       
       </ul>
