--- a/apámnak/index.html
+++ b/apámnak/index.html
@@ -1,2 +1,1 @@
-<href:https://scratch.mit.edu/projects/553986572/>
-<span>asd<span>
+<meta http-equiv="refresh" content="0; URL=https://scratch.mit.edu/projects/553986572/" />
