--- a/apámnak/index.html
+++ b/apámnak/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; URL=https://scratch.mit.edu/projects/553986572/" />
+<!DOCTYPE html>
+<html>
+<body>
+
+
+<a href="myfile.ext">Click to download<\a>
+
+</body>
+</html>
