--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
        <!DOCTYPE html>
 <html lang="hu">
 <head>
-
+	     <meta charset="UTF-8">
+         <meta name="description" content="Itt ezen az oldalon jó filmeket és sorozatokat találsz.">
+         <meta name="author" content=">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="style.css">
+                                                
   <title>Filmek és Sorozatok</title>
     <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/838443007853199363/864029880629723156/PicsArt_07-12-08.25.48.jpg" type="image/x-icon">
   <meta charset="utf-8">
