--- a/fes/index.html
+++ b/fes/index.html
@@ -372,7 +372,7 @@ cursor: alias;}
 
      <strong><h6>
 <p>Beszt filmek evör</p><p>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Keress parancsra névből/benne lévő adatból" title="Írj be parancsot!">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Keress filmre/sorozatra névből/benne lévő adatból" title="Keress!">
 
 
 </p><ul id="myUL">
