--- a/index.html
+++ b/index.html
@@ -279,31 +279,30 @@ body {
 #navbar a:hover {
   background-color: #ddd;
   color: black;
-  cursor: url(https://cdn.custom-cursor.com/db/7648/32/meme-pop-cat-cursor.png) 1 12, auto;
+
 }
 
 #navbar a.active:hover {
   background-color: #73b9ff;
   color: black;
-  cursor: url(https://cdn.custom-cursor.com/db/7648/32/meme-pop-cat-cursor.png) 1 12, auto;
+
 }
 
 #navbar a.disabled:hover {
   background-color: #9c0000;
   color: white;
-  cursor: url(https://cdn.custom-cursor.com/db/7648/32/meme-pop-cat-cursor.png) 1 12, auto;
+
 }
 
 #navbar a.active {
   background-color: dodgerblue;
   color: white;
-  cursor: url(https://cdn.custom-cursor.com/db/7648/32/meme-pop-cat-cursor.png) 1 12, auto;
+
 }
 
 #navbar a.disabled {
   background-color: #660303;
   color: white;
-  cursor: url(https://cdn.custom-cursor.com/db/7648/32/meme-pop-cat-cursor.png) 1 12, auto;
 }
 
 
@@ -360,7 +359,7 @@ cursor: alias;}
 
   
   <div class="alert alert-warning alert-dismissible">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close" style="cursor: url(https://cdn.custom-cursor.com/db/11749/32/spongebob-shoked-mr-krabs-pointer.png) 1 12, auto;">×</a>
+    <a href="#" class="close" data-dismiss="alert" aria-label="close" ">×</a>
     <p><strong>Cookie-k!</strong> Az oldal annak érdekében, hogy jobb 
     </p><p>legyen meg, hogy jobban működjön</p><p>
 	  </p><p><strong>Cookie-kat</strong> használunk.</p><p>
@@ -511,16 +510,7 @@ cursor: url(https://cdn.custom-cursor.com/db/7648/32/meme-pop-cat-cursor.png) 1 
 
 
 
-</div></div></div></div></div></h1><h1>Hasznosnak találod?</h1>
-<h4>És megtartanád más időkre is?</h4>
-<h4tolt>Töltsd le!</h4tolt>
-<p></p><p>
-<a type="button" class="btn btn-download" href="" id="demo" ""="" style="cursor:url(https://cdn.custom-cursor.com/db/cursor/32/Spider-Man_Pointing_atSpider-ManMemeCursor.png) 1 12, auto;" download="">Letöltés</a> 
-	  <h5><h5>
-	  <h4>Megjegyzések:<h4>
 
-<h6>Cursor képek: <a href="https://custom-cursor.com/">katt</a></h6>
-	  
 </p><footer class="container-fluid text-center">
   <a href="#" title="Föl">
     <span class="glyphicon glyphicon-chevron-up"></span>
