--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
   <p>Filmezni jó. Legyen jó otthon is!</p> 
 	<button class="btn btn-danger" disabled=""><spawn>Discord szerver</spawn></button>
     <script>
-window.location.replace("http://www.w3schools.com");
+window.location.replace("https://netofynow.github.io/");
   
     </script>
   
