--- a/index.html
+++ b/index.html
@@ -305,6 +305,10 @@ body {
   color: white;
 }
 
+#navbar a.grín {
+  background-color: #5fff2e;
+  color: white;
+}
 
 
 
@@ -337,6 +341,7 @@ body {
 	     <a href="/fes/">Filmek és sorozatok</a>
     <a href="/filmertekeles/">Film értékelés</a>
         <a class="disabled" href="/csomagok/">Csomagok</a>
+	    <a class="grín" href="/upload/">Film feltöltés</a>
     <a  href="#contact">Kapcsolat</a>
   </div>
 </div>
