--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ body {
 	     <a href="/fes/">Filmek és sorozatok</a>
     <a href="/filmertekeles/">Film értékelés</a>
         <a class="disabled" href="/csomagok/">Csomagok</a>
-	    <a class="grín" href="/upload/">Film feltöltés</a>
+	    <a href="/upload/">Film feltöltés</a>
     <a  href="#contact">Kapcsolat</a>
   </div>
 </div>
