--- a/upload/index.html
+++ b/upload/index.html
@@ -365,7 +365,7 @@ cursor: alias;}
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-	<button class="btn btn-success" href="http://gg.gg/15ercn"><span>Feltöltés Google Forms-on</span></button>
+	<button class="btn btn-success" href="http://gg.gg/15ercn" target="_blank"><span>Feltöltés Google Forms-on</span></button>
 
      
      
