--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ cursor: alias;}
   <div class="row">
     <div class="col-sm-8">
       <h2>Rólunk</h2><br>
-      <h4>Ezt a projektet 2021-ben kezdtem, "Filmek és sorozatok,, volt a neve. Azóta is egyedül csinálom.</h4><br>
+      <h4>Ezt a projektet 2020-ben kezdtem, "Filmek és sorozatok,, volt a neve. Azóta is egyedül csinálom.</h4><br>
       <p></p>    </div>
      </div>
        </div>  </div>
@@ -392,8 +392,8 @@ cursor: alias;}
   <div class="row">
     <div class="col-sm-5">
       <p><span class="glyphicon glyphicon-map-marker"></span> Budapest, HU</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Itt a Discordom tessék vigyed: TutiCraft#6216</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> fejlesztés alatt</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Itt a Discordom tessék vigyed: Almighty.Adam.</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> Fejlesztés alatt</p>
     </div>
     <div class="col-sm-7 slideanim slide">
       <div class="row">
