--- a/csomagok/index.html
+++ b/csomagok/index.html
@@ -316,7 +316,6 @@ body {
   <div id="navbar-right">
     <a class="active" href="/">Kezdőlap</a>
 	     <a href="/fes/">Filmek és sorozatok</a>
-    <a href="/filmajanlas/">Film ajánlás</a>
         <a href="#about">Rólunk</a>
     <a href="#contact">Kapcsolat</a>
   </div>
@@ -384,20 +383,21 @@ cursor: alias;}
         <div class="pricing-table-3 basic">
             <div class="pricing-table-header">
                 <h3><strong>Ingyenes</strong></h3>
-                <p>INGYEN?</p>
+                <p>Whaaat</p>
             </div>
             <div class="price"><strong>$0.00</strong> / HÓNAP</div>
             <div class="pricing-body">
                 <ul class="pricing-table-ul">
                     <li><i class="fa fa-send"></i> Alap kiváltságok</li>
-                    <li><i class="fa fa-cloud"></i> 5 Filmet kérelmezhet/ajánlhat/tölthet-fel havonta</li>
+                    <li><i class="fa fa-cloud"></i> 10 Filmet kérelmezhet/ajánlhat/tölthet-fel havonta</li>
                     <li><i class="fa fa-database"></i> Ingyen azért nem rossz megoldás</li>
                     <li class="not-avail"><i class="fa fa-clock-o"></i> Support viszonylag hamar vissza ír</li>
-                    <li class="not-avail"><i class="fa fa-envelope"></i> Discord Support</li>
+                    <li class="not-avail"><i class="fa fa-envelope"></i> Gúd Support</li>
                 </ul><a href="#" class="btn btn-primary">Oksa elfogadom</a></div>
         </div>
     </div>
     <div class="col-md-4 col-sm-6">
+	    <!---
         <div class="pricing-table-3 premium">
             <div class="pricing-table-header">
                 <h2><strong>PREMIUM</strong></h2>
@@ -433,7 +433,7 @@ cursor: alias;}
         </div>
     </div>
 </div>
-
+-->
 <style>
 @charset "utf-8";
 /* CSS Document */
