--- a/csomagok/index.html
+++ b/csomagok/index.html
@@ -327,7 +327,6 @@ body {
 <div class="jumbotron text-center">
  <img src="https://avatars.githubusercontent.com/u/87304347?v=4" alt="netofy" widht="100" height="100"> <h1></h1> 
   <p>Filmezni jó. Legyen jó otthon is!</p> 
-	<button class="btn btn-danger" disabled><spawn>Discord szerver</span></button>
 </div>
 <style>
 .alert-link {
@@ -397,6 +396,7 @@ cursor: alias;}
         </div>
     </div>
     <div class="col-md-4 col-sm-6">
+	    <iframe src="https://discord.com/widget?id=968790661996363838&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 	    <!---
         <div class="pricing-table-3 premium">
             <div class="pricing-table-header">
