--- a/index.html
+++ b/index.html
@@ -351,7 +351,6 @@ body {
 <div class="jumbotron text-center">
  <img src="https://avatars.githubusercontent.com/u/87304347?v=4" alt="netofy" widht="100" height="100"> <h1></h1> 
   <p>Filmezni jó. Legyen jó otthon is!</p> 
-	<button class="btn btn-danger" disabled=""><spawn>Discord szerver</spawn></button>
 </div>
 <style>
 .alert-link {
@@ -463,7 +462,7 @@ img {
     
   </div> 
   
-	  
+	  <iframe src="https://discord.com/widget?id=968790661996363838&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 	  
 	 <script>
 let url = document.URL;
