--- a/csomagok/index.html
+++ b/csomagok/index.html
@@ -396,8 +396,7 @@ cursor: alias;}
         </div>
     </div>
     <div class="col-md-4 col-sm-6">
-	    <iframe src="https://discord.com/widget?id=968790661996363838&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-	    <!---
+	      <!---
         <div class="pricing-table-3 premium">
             <div class="pricing-table-header">
                 <h2><strong>PREMIUM</strong></h2>
@@ -429,11 +428,14 @@ cursor: alias;}
                     <li><i class="fa fa-database"></i> Kedvező ajánlat minden ember számára. Hamarabb láthatod a filmeket mint mások.</li>
                     <li class="not-avail"><i class="fa fa-clock-o"></i> Még hamarabb vissza ír a support.</li>
                     <li class="not-avail"><i class="fa fa-envelope"></i> Email, Discord, Web Support</li>
-                </ul><a href="#" class="btn btn-danger">Ezt kérem!</a></div>
+                </ul><a href="#" class="btn btn-danger">Ezt kérem!</a>
+	    -->
+    </div>
         </div>
     </div>
 </div>
--->
+	    <iframe src="https://discord.com/widget?id=968790661996363838&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
 <style>
 @charset "utf-8";
 /* CSS Document */
